--- a/style/main.css
+++ b/style/main.css
@@ -371,6 +371,13 @@ hr {
     background:rgba(0,0,0,0);
     background-image: url("../tiles/768-alt1.png");
     background-size: 100% auto;}
+  .tile.tile-768-alt2 .tile-inner {
+    width:200%;
+    height:200%;
+    transform:translate(-25%,-25%);
+    background:rgba(0,0,0,0);
+    background-image: url("../tiles/768-alt2.png");
+    background-size: 100% auto;}
   .tile.tile-1536 .tile-inner {
     width:200%;
     height:200%;
